@@ -1,9 +1,14 @@
-1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+1998-10-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile.am (CURRENT): Increment.  Swarm 1.3.1 released.
 	(XPMFILES): New variable.
 	(EXTRA_DIST): Include it.
 	
+	* TkExtra.m (ensureBltSupportFiles): Check ../BLT/library instead
+	of lib.  Quote the value for set of blt_library.
+
+1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
 	* Widget.m (get_geometry_element): Make i unsigned.
 
 	* win32dib.h (dib_paletteIndexForObject): Change "for" to "For".
